--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 User-agent: Googlebot
 Disallow: /nogooglebot/
 
-Panna Competition: http://www.kieranbrownpannacompetition.com/pannacompetition.xml
 <head>
 <meta charset="utf-8"/>
-<link rel='icon' href='favicon.ico' type='image/x-icon'/>
+<link rel='icon' href="favicon.ico" type="image/x-icon" sizes="16*16">
 <style>
 h1 {
   color: blue;
