--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Disallow: /nogooglebot/
 
 <head>
 <meta charset="utf-8"/>
-<link rel='icon' href="favicon.ico" type="image/x-icon" sizes="16*16">
+<link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16*16">
 <style>
 h1 {
   color: blue;
