--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html  lang="en">
 
 <head>
+	<title>Kieran Brown Competition</title>
 <meta charset="utf-8"/>
 <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16*16">
 <style>
@@ -24,12 +25,14 @@ p {
   <meta name="Participation form" content="Participating">
   <meta name="author" content="Arpan Bhattacharyya">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+$ [ ! -d directory ] && mkdir -p directory || "mv files directory/"
 </style>
 </head>
 <body style="background-color:RGB(100,100,100)">
 
 
-<h1>Kieran Brown Panna Competition</h1><img src="Kieran_brown.jpeg" alt="Kieran Brown" img size ="16*16">	
+<img src="Kieran_brown.jpeg" alt="Kieran Brown" img size ="16*16">	
 <img src="panna.jpg" alt="Panna Competiton" img size ="16*16">	
 <p>This competition is made by Kieran Brown Youtuber
 Subscribe his youtube channel link is below
