--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ $ [ ! -d directory ] && mkdir -p directory || "mv files directory/"
 <body style="background-color:RGB(100,100,100)">
 
 
-<img src="Kieran_brown.jpeg" alt="Kieran Brown" img size ="16*16">	
+	<h1>Kieran Brown Panna Competiton</h1><img src="Kieran_brown.jpeg" alt="Kieran Brown" img size ="16*16">	
 <img src="panna.jpg" alt="Panna Competiton" img size ="16*16">	
 <p>This competition is made by Kieran Brown Youtuber
 Subscribe his youtube channel link is below
