--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 	<title>Kieran Brown Competition</title>
 <meta charset="utf-8"/>
-<link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16*16">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 <style>
 h1 {
   color: blue;
@@ -58,12 +61,12 @@ You Can Participate in this competitions by filling the participation form given
     <th>Fifa 20 Ranking</th>
   </tr>
   <tr>
-    <td>Cristiano</td><img src="Cristianoronaldo.jpg" alt="Cristiano Ronaldo" img size ="16*16">
+    <td>Cristiano</td><img src="https://www.google.com/search?q=cristiano+ronaldo&rlz=1C1SQJL_enIN842IN842&sxsrf=ACYBGNTn1LurlrgF1HaiUWlDK56lGvqTcw:1578493631250&source=lnms&tbm=isch&sa=X&ved=2ahUKEwia066Bm_TmAhWH6XMBHcc3C0QQ_AUoAnoECBoQBA&biw=1366&bih=625#imgrc=5OL0XhhNdzN-wM:" alt="Cristiano Ronaldo" img size ="16*16">
     <td>Ronaldo</td>
     <td>93</td>
   </tr>
   <tr>
-    <td>Sergio Kun</td><img src="sergioaguero.jpg" alt="Sergio Aguero" img size ="16*16">
+    <td>Sergio Kun</td><img src="https://www.google.com/search?q=sergio+aguero&rlz=1C1SQJL_enIN842IN842&sxsrf=ACYBGNTkTCTBhFCaQaAZFEtKfoy5aETZtw:1578493591311&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiyganumvTmAhXs7HMBHUJuB_cQ_AUoAnoECBYQBA&biw=1366&bih=625#imgrc=a78u2HYH8pPA8M:" alt="Sergio Aguero" img size ="16*16">
     <td>Aguero</td>
     <td>89</td>
   </tr>
@@ -73,29 +76,29 @@ You Can Participate in this competitions by filling the participation form given
     <td>94</td>
 </tr>
 <tr>
-    <td>Luis </td><img src="suarez.jpg" alt="Luis Suarez" img size ="16*16">
+    <td>Luis </td><img src="https://www.google.com/search?q=luis+suarez&rlz=1C1SQJL_enIN842IN842&sxsrf=ACYBGNRhiaSGqIG-pFHXgLnGX8BYso72Zw:1578493726704&source=lnms&tbm=isch&sa=X&ved=2ahUKEwi73fCum_TmAhX0juYKHTWhAsQQ_AUoAnoECBkQBA&biw=1366&bih=625#imgrc=sheLuFT-Pa9R_M:" alt="Luis Suarez" img size ="16*16">
     <td>Suarez</td>
     <td>91</td>
 </tr>
 <tr>
-    <td>Sergio</td><img src="ramos.jpg" alt="Sergio Ramos" img size ="16*16">
+    <td>Sergio</td><img src="https://www.google.com/search?q=sergio+ramos&rlz=1C1SQJL_enIN842IN842&sxsrf=ACYBGNQDJWpamxi0sfKNbfft67IkF_GxTQ:1578493767068&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjynZDCm_TmAhVX6nMBHYVgDS0Q_AUoAXoECBkQAw&biw=1366&bih=625#imgrc=1_eat8hjj7ALkM:" alt="Sergio Ramos" img size ="16*16">
     <td>Ramos</td>
     <td>91</td>
 </tr>
 <tr>
-    <td>Paulo</td><img src="dybala.jpg" alt="Paulo Dybala" img size ="1*1">
+    <td>Paulo</td><img src="https://www.google.com/search?q=dybala&rlz=1C1SQJL_enIN842IN842&sxsrf=ACYBGNQiXlepXCWkrTXMFew75-phM6k3lg:1578493794560&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj_oZ7Pm_TmAhU_6nMBHW3nDwEQ_AUoAnoECBQQBA&biw=1366&bih=625#imgrc=IjE5WuzMSWS_wM:" alt="Paulo Dybala" img size ="1*1">
     <td>Dybala</td>
     <td>89</td>
 </tr><tr>
-    <td>Gerard</td><img src="pique.jpg" alt="Gerard Pique" img size ="16*16">
+    <td>Gerard</td><img src="https://www.google.com/search?q=pique&rlz=1C1SQJL_enIN842IN842&sxsrf=ACYBGNSRqnzvz60GhZEAseQsFNCqycb2Fw:1578493826632&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjJ4cPem_TmAhXH_XMBHaogABEQ_AUoAnoECBQQBA&biw=1366&bih=625#imgrc=2mwyC264lyIQ_M:" alt="Gerard Pique" img size ="16*16">
     <td>Pique</td>
     <td>87</td>
 </tr><tr>
-    <td>Takefusa</td><img src="kubo.jpg" alt="Takefusa Kubo" img size ="16*16">
+    <td>Takefusa</td><img src="https://www.google.com/search?q=kubo&rlz=1C1SQJL_enIN842IN842&sxsrf=ACYBGNS4Kod59ud2oI53gQh4SHctS2U6Gg:1578493851617&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjk27jqm_TmAhXu73MBHTG4C6MQ_AUoAnoECBkQBA&biw=1366&bih=625#imgrc=V9KSGfH6tFaBZM:" alt="Takefusa Kubo" img size ="16*16">
     <td>Kuba</td>
     <td>63</td>
 </tr><tr>
-    <td>David</td><img src="gea.jpg" alt="David de Gea" img size ="16*16">
+    <td>David</td><img src="https://www.google.com/search?rlz=1C1SQJL_enIN842IN842&tbm=isch&sxsrf=ACYBGNQeN0iOGZ-tsj7VZW76mpaIpEcp7w%3A1578493880330&sa=1&ei=uOcVXu3aE6_A3LUP67WhwAY&q=gea+david&oq=gea+david&gs_l=img.3..0i5i30j0i8i30l9.556.2235..2423...0.0..0.416.1598.0j5j2j0j1......0....1..gws-wiz-img.......35i39j0j0i67.ovmzdtIH26A&ved=0ahUKEwjtlpH4m_TmAhUvILcAHetaCGgQ4dUDCAc&uact=5#imgrc=065L_87LNjdhrM:" alt="David de Gea" img size ="16*16">
     <td>de Gea</td>
     <td>91</td>
 </tr>
