--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
 	<title>Kieran Brown Competition</title>
 <meta charset="utf-8"/>
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+	<link rel="shortcut icon" href="https://www.google.com/search?q=favicon&rlz=1C1SQJL_enIN842IN842&sxsrf=ACYBGNQzaps62KWR_qb2zbBbPnh4qmrANw:1578494327875&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiZgMXNnfTmAhVV4XMBHWAYDQ8Q_AUoAXoECBMQAw&biw=1366&bih=625#imgrc=DkRAD0HzYR5vpM:" />
 <style>
 h1 {
   color: blue;
