--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@ p {
   <meta name="author" content="Arpan Bhattacharyya">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-$ [ ! -d directory ] && mkdir -p directory || "mv files directory/"
+
 </style>
 </head>
 <body style="background-color:RGB(100,100,100)">
 
 
 	<h1>Kieran Brown Panna Competiton</h1><img src="Kieran_brown.jpeg" alt="Kieran Brown" img size ="16*16">	
-<img src="panna.jpg" alt="Panna Competiton" img size ="16*16">	
+<img src="https://www.google.com/search?q=kieran+brown&rlz=1C1SQJL_enIN842IN842&sxsrf=ACYBGNRXDPP2QARtCk9CbAsH2ZZnoj3pjA:1578495337681&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiihYevofTmAhW5wTgGHYbCC30Q_AUoAnoECAwQBA&biw=1366&bih=625#imgrc=Dgm2x5lxkvKyTM:" alt="Panna Competiton" img size ="16*16">	
 <p>This competition is made by Kieran Brown Youtuber
 Subscribe his youtube channel link is below
 You Can Participate in this competitions by filling the participation form given below</p>
