--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Kieran Brown Competition</title>
 <meta charset="utf-8"/>
-	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel='icon' href='favicon.ico' type='image/x-icon'/ >
 <style>
 h1 {
   color: blue;
@@ -32,7 +32,7 @@ p {
 <body style="background-color:RGB(100,100,100)">
 
 
-	<h1>Kieran Brown Panna Competiton</h1><img src="Kieran_brown.jpg">
+	<h1>Kieran Brown Panna Competiton</h1>
 	<p>This competition is made by Kieran Brown Youtuber
 Subscribe his youtube channel link is below
 You Can Participate in this competitions by filling the participation form given below</p>
