--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Kieran Brown Competition</title>
 <meta charset="utf-8"/>
-	<link rel='icon' href='favicon.ico' type='image/x-icon'/ >
+	<link rel="shortcut icon" href="kieranbrown.png.jpg" type="image/x-icon"/ >
 <style>
 h1 {
   color: blue;
