--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ You Can Participate in this competitions by filling the participation form given
 
 <p><a href="https://www.youtube.com/user/Footballskills98">His channel's link</a>
 
-<a href="D:\Desktop\Participation Form.mht">Participation form	</a></p>
+<a href="Participation Form.mht">Participation form	</a></p>
 
 
 
